--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ html {
 body {
     font-family: Poppins, serif;
     margin: 0;
-    padding: 0;
+    padding: 0 !important;
 }
 
 *, *:before, *:after {
